# crewai-learnings-Agnets

./: readme.md
01-uv-projects/project-2/: pyproject.toml
01-uv-projects/project-2/src/project2/: __init__.py
01-uv-projects/project-3/: pyproject.toml
01-uv-projects/project-3/src/project3/: litellm.py
01-uv-projects/project-4/: pyproject.toml
01-uv-projects/project-4/src/project4/: litellm.py
Agentic-RAG-Crewai/: README.md  pyproject.toml
Agentic-RAG-Crewai/src/budget_knowledge/: main.py  pdfSearch.py
Agentic-RAG-knowledgeSource/: README.md  pyproject.toml
Agentic-RAG-knowledgeSource/src/knowledge/: main1.py
Market_Analyst_Agent/: README.md  market_analysis_2025.md  pyproject.toml
Market_Analyst_Agent/src/practice_1/: crew.py  main.py
crewai-flows/: crewai_flow.html  fun_fact.md  pyproject.toml
crewai-flows/src/crewai_flows/: __init__.py  main.py  main1.py  main2.py  main3.py
google_search_agent/: README.md  pyproject.toml
google_search_agent/src/google_search_agent/: crew.py  main.py
manager_agent/: README.md  pyproject.toml
manager_agent/src/manager_agent/: main.py  sequential_process.py
multi_crews_Agent/: README.md  ai_trends_report.md
multi_crews_Agent/src/practice_1/: main.py
multipleCrews_with_multipleAgent/: README.md  market_analysis_report.md  pyproject.toml
multipleCrews_with_multipleAgent/src/practice_1/: main.py
shoping-Assistant-Agent/: README.md  pyproject.toml  shopping_recommendation.md
shoping-Assistant-Agent/src/practice_1/: shopping_agent.py
