[project]
name = "manager_agent"
version = "0.1.0"
description = "manager-agent using crewAI"
authors = [{ name = "Muneer", email = "muneeriqbal729@gmail.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
manager_agent = "manager_agent.main:main"
sequential_process = "manager_agent.sequential_process:main"
google_search = "manager_agent.google_search_agent:main"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
