[project]
name = "practice_1"
version = "0.1.0"
description = "practice_1 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0",
]

[project.scripts]
shopping_agent = "practice_1.shopping_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
