[project]
name = "project3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm>=1.59.10",
]

[project.scripts]
project3 = "project3:main"
gemini = "project3.litellm:call_gemini"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
